--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,86 @@
 #root {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  .mainSection {
-    flex-grow: 1;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.mainSection {
+  flex-grow: 1;
+}
+
+.navColor {
+  background-image: linear-gradient(
+    to top,
+    #a7a6cb 0%,
+    #8989ba 52%,
+    #8989ba 100%
+  );
+}
+.colorFooter {
+  background-image: linear-gradient(
+    to top,
+    #a7a6cb 0%,
+    #8989ba 52%,
+    #8989ba 100%
+  );
+}
+.banner {
+  height: 400px;
+  object-fit: cover;
+  overflow: hidden;
+}
+
+.btn-grad {
+  background-image: linear-gradient(
+    to right,
+    #4776e6 0%,
+    #8e54e9 51%,
+    #4776e6 100%
+  );
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
+}
+
+.btn-grad:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
+
+.imgRecetaTabla{
+  width: 300px;
+}
+
+.filaTabla{
+  height: auto;
+}
+
+
+
+@media (max-width: 575.98px) {
   .banner {
-    height: 400px;
-    object-fit: cover;
+    height: fit-content;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .imgRecetaTabla {
+    width: 500px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .instruccionesReceta{
     overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
-  
-  @media (max-width: 575.98px) {
-    .banner {
-      height: fit-content;
-    }
-  }
-  
+}
