--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
 }
 
 .btn-grad:hover {
-  background-position: right center; /* change the direction of the change here */
+  background-position: right center;
   color: #fff;
   text-decoration: none;
 }
