--- a/src/App.css
+++ b/src/App.css
@@ -54,16 +54,15 @@
   text-decoration: none;
 }
 
-
-.imgRecetaTabla{
-  width: 300px;
+.img-thumbnail {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
 }
 
-.filaTabla{
+.filaTabla {
   height: auto;
 }
-
-
 
 @media (max-width: 575.98px) {
   .banner {
@@ -71,14 +70,14 @@
   }
 }
 
-@media (max-width: 767.98px) {
+/* @media (max-width: 767.98px) {
   .imgRecetaTabla {
     width: 500px;
   }
-}
+} */
 
 @media (max-width: 767.98px) {
-  .instruccionesReceta{
+  .instruccionesReceta {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
